# wattpost

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.appliance  LICENSE  LICENSE.txt  NOTICE  README.md  SECURITY.md  config.example.yaml  docker-compose.example.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  driver_request.yml
.github/workflows/: build-appliance-image.yml  build-demo-image.yml  build-image.yml  build-updater-image.yml  ci.yml  publish-source.yml
blog/: atomic-swap-updates.md  bt2-silent-on-lan.md  first-install.md  ha-dashboards.md  ha-energy-dashboard.md  ha-low-soc-alerts.md  ha-mqtt-external-broker.md  ha-vs-vrm.md  home-assistant.md  index.json  renogy-over-cable.md  solar-pause-smart-plug.md  v0-1-20-release.md  v0-1-21-release.md  v0-1-22-release.md  victron-over-cable.md  welcome.md
docs/: adding-a-vendor.md  alerts.md  api-keys.md  api.md  architecture.md  atomic-swap-updates.md  backup.md  coverage-roadmap.md  devices.md  docker-install.md  faq.md  firewall-test-plan.md  first-boot.md  forecast.md  getting-started.md  gps-and-location.md  history.md  hotspot-test-plan.md  hotspot.md  index.appliance.json  integrations.md  kiosk-display.md  kiosk.md  license.md  local-password.md  mqtt-in.md  mqtt.md  outputs.md  pairing.md  privacy-and-telemetry.md  pwa-and-mobile.md  recommended-hardware.md  release-pipeline.md  remote-access.md  rules.md  saas-api.md  security.md  ssh-and-tinkering.md  supported-hardware.md  troubleshooting.md  (+5 more)
docs/architecture/: identity-v2.md
mobile-app/: .gitignore  README.md  capacitor.config.json  capacitor.config.ts  package-lock.json  package.json
mobile-app/android/: capacitor.settings.gradle
mobile-app/scripts/: build-www.mjs
mobile-app/www/: bootstrap.css  bootstrap.js  index.html
packaging/: README.md  build-image.sh  dev-sudoers.sh  install.sh
packaging/cli/: wattpost-config  wattpost-kiosk-display  wattpost-rollback  wattpost-update
packaging/docker/: entrypoint.sh
packaging/lib/: wattpost-privileged-sync.sh
packaging/motd/: 10-wattpost
scripts/: capture-landing-videos.py  check-commit-msg.sh  check-em-dash.sh  check-memory-links.sh  check-preambles.sh  generate-og-image.py  probe_writable_setting.py  screenshot-dashboards.py  sign_release.py  verify_deye.py  verify_eg4_xp.py  verify_fc06_serial.py  verify_jbd.py  verify_new_drivers.py  verify_ve_direct.py  verify_voltronic.py
solar_monitor/: __init__.py  cli.py  config.py  demo.py  diagnostics.py  disk_cleanup.py  helper_client.py  host_health.py  install_id.py  location.py  modbus.py  netsec.py  orchestrator.py  scheduler.py  settings_write.py  signed_audit.py  voltronic_crc.py  web_auth.py
tests/: test_alert_engine.py  test_autoapply.py  test_backup_redaction.py  test_backup_restore.py  test_backup_selective_restore.py  test_gps_nmea.py  test_hotspot_captive.py  test_hotspot_config_apply.py  test_hotspot_handoff.py  test_integrations_aggregate.py  test_kiosk_broker_scope.py  test_prometheus_exporter.py  test_release_verify.py  test_storage_write_lock.py  test_update_channel.py  test_verify_download.py  test_wifi_ap_scan.py  test_wifi_static_ip.py
updater/: Dockerfile  updater.py
(+193 files in other folders)
